--- a/index.html
+++ b/index.html
@@ -14,49 +14,49 @@
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
   </head>
   <body>
-    <div class="relative flex size-full min-h-screen flex-col bg-[#f8f9fc] group/design-root overflow-x-hidden" style='font-family: Epilogue, "Noto Sans", sans-serif;'>
+    <div class="relative flex min-h-screen flex-col bg-[#f8f9fc] group/design-root overflow-x-hidden" style="font-family: Epilogue, 'Noto Sans', sans-serif;">
       <div class="layout-container flex h-full grow flex-col">
-        <header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-b-[#e7ecf3] px-10 py-3">
+        <header class="flex items-center justify-between whitespace-nowrap border-b border-solid border-b-[#e7ecf3] px-4 sm:px-10 py-3">
           <div class="flex items-center gap-4 text-[#0d131b]">
             <h2 class="text-[#0d131b] text-lg font-bold leading-tight tracking-[-0.015em]">HAAL</h2>
           </div>
         </header>
-        <div class="gap-1 px-6 flex flex-1 justify-center py-5">
-          <div class="layout-content-container flex flex-col max-w-[920px] flex-1">
+        <div class="gap-1 px-4 sm:px-6 flex flex-1 justify-center py-5">
+          <div class="layout-content-container flex flex-col max-w-full sm:max-w-[920px] flex-1">
             <div class="@container">
-              <div class="flex flex-col gap-6 px-4 py-10 @[480px]:gap-8 @[864px]:flex-row">
+              <div class="flex flex-col gap-6 px-2 sm:px-4 py-6 sm:py-10 md:gap-8 md:flex-row">
                 <div
-                  class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl @[480px]:h-auto @[480px]:min-w-[400px] @[864px]:w-full"
+                  class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl sm:h-auto sm:min-w-[400px] md:w-full"
                   style='background-image: url("https://cdn.usegalileo.ai/sdxl10/e846b766-26fd-4626-85e2-b2ddb31ad6a2.png");'
                 ></div>
-                <div class="flex flex-col gap-6 @[480px]:min-w-[400px] @[480px]:gap-8 @[864px]:justify-center">
+                <div class="flex flex-col gap-6 md:min-w-[400px] md:gap-8 md:justify-center">
                   <div class="flex flex-col gap-2 text-left">
                     <h1
-                      class="text-[#0d131b] text-4xl font-black leading-tight tracking-[-0.033em] @[480px]:text-5xl @[480px]:font-black @[480px]:leading-tight @[480px]:tracking-[-0.033em]"
+                      class="text-[#0d131b] text-2xl sm:text-4xl font-black leading-tight tracking-[-0.033em]"
                     >
                       HAAL is the premier mental health app for Gen Z
                     </h1>
-                    <h2 class="text-[#0d131b] text-sm font-normal leading-normal @[480px]:text-base @[480px]:font-normal @[480px]:leading-normal">
+                    <h2 class="text-[#0d131b] text-base font-normal leading-normal">
                       Featuring daily mood check-ins, a journal, breathing exercises, and resources
                     </h2>
                   </div>
                   <a
                     href="https://apps.apple.com/th/app/haal/id6477761521"
-                    class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 @[480px]:h-12 @[480px]:px-5 bg-[#1366ec] text-[#f8f9fc] text-sm font-bold leading-normal tracking-[0.015em] @[480px]:text-base @[480px]:font-bold @[480px]:leading-normal @[480px]:tracking-[0.015em]"
+                    class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 sm:h-12 sm:px-5 bg-[#1366ec] text-[#f8f9fc] text-sm font-bold leading-normal tracking-[0.015em] sm:text-base sm:font-bold sm:leading-normal sm:tracking-[0.015em]"
                   >
                     <span class="truncate">Download on the App Store</span>
                   </a>
                 </div>
               </div>
             </div>
-            <div class="flex flex-col gap-10 px-4 py-10 @container">
+            <div class="flex flex-col gap-6 px-2 sm:px-4 py-6 sm:py-10 @container">
               <div class="flex flex-col gap-4">
                 <h1
-                  class="text-[#0d131b] tracking-light text-[32px] font-bold leading-tight @[480px]:text-4xl @[480px]:font-black @[480px]:leading-tight @[480px]:tracking-[-0.033em] max-w-[720px]"
+                  class="text-[#0d131b] tracking-light text-xl sm:text-4xl font-bold leading-tight max-w-full sm:max-w-[720px]"
                 >
                   Features
                 </h1>
-                <p class="text-[#0d131b] text-base font-normal leading-normal max-w-[680px]">
+                <p class="text-[#0d131b] text-base font-normal leading-normal max-w-full">
                   HAAL is a mental health app that helps you take care of yourself. It's designed to be easy to use and to help you feel good every day.
                 </p>
               </div>
@@ -101,13 +101,13 @@
                 ></div>
               </div>
             </div>
-            <h3 class="text-[#0d131b] tracking-light text-2xl font-bold leading-tight px-4 text-left pb-2 pt-5">Awards</h3>
-            <a href="http://congressionalappchallenge.us/23-il14/" class="text-[#1266EC] underline text-base font-normal leading-normal pb-3 pt-1 px-4">Congressional App Challenge Winner</a>
+            <h3 class="text-[#0d131b] tracking-light text-2xl font-bold leading-tight px-2 sm:px-4 text-left pb-2 pt-5">Awards</h3>
+            <a href="http://congressionalappchallenge.us/23-il14/" class="text-[#1266EC] underline text-base font-normal leading-normal pb-3 pt-1 px-2 sm:px-4">Congressional App Challenge Winner</a>
           </div>
         </div>
-        <footer class="flex items-center justify-start py-3 px-11 bg-[#f8f9fc] border-t border-solid border-t-[#e7ecf3]">
+        <footer class="flex items-center justify-start py-3 px-4 sm:px-11 bg-[#f8f9fc] border-t border-solid border-t-[#e7ecf3]">
           <p class="text-[#0d131b] text-lg font-normal leading-normal">
-               © Maya Sharma 2024 | <a href="mailto:maayusharma@gmail.com" class="text-[#000000] underline">maayusharma@gmail.com</a>
+            © Maya Sharma 2024 | <a href="mailto:maayusharma@gmail.com" class="text-[#000000] underline">maayusharma@gmail.com</a>
             <a href="https://www.linkedin.com/in/mayasharma27" class="ml-4"><img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" class="w-7 h-7 inline"></a>
           </p>
         </footer>
