Change titles and styling on homepage

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
         <div class="gap-1 px-4 sm:px-6 flex flex-1 justify-center py-5">
           <div class="layout-content-container flex flex-col max-w-full sm:max-w-[920px] flex-1">
             <div class="@container">
-              <div class="flex flex-col gap-6 px-2 sm:px-4 py-6 sm:py-10 md:gap-8 md:flex-row">
+              <div class="flex flex-col gap-6 px-2 sm:px-4 py-6 sm:py-10 md:gap-8">
                 <div
-                  class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl sm:h-auto sm:min-w-[400px] md:w-full"
+                  class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl sm:h-auto"
                   style='background-image: url("https://cdn.usegalileo.ai/sdxl10/e846b766-26fd-4626-85e2-b2ddb31ad6a2.png");'
                 ></div>
-                <div class="flex flex-col gap-6 md:min-w-[400px] md:gap-8 md:justify-center">
+                <div class="flex flex-col gap-6 md:gap-8 justify-center">
                   <div class="flex flex-col gap-2 text-left">
                     <h1
                       class="text-[#0d131b] text-2xl sm:text-4xl font-black leading-tight tracking-[-0.033em]"
@@ -60,7 +60,7 @@
                   HAAL is a mental health app that helps you take care of yourself. It's designed to be easy to use and to help you feel good every day.
                 </p>
               </div>
-              <div class="grid grid-cols-[repeat(auto-fit,minmax(158px,1fr))] gap-3 p-0">
+              <div class="grid grid-cols-1 sm:grid-cols-3 gap-3 p-0">
                 <div class="flex flex-1 gap-3 rounded-lg border border-[#cfd8e7] bg-[#f8f9fc] p-4 flex-col">
                   <div class="flex flex-col gap-1">
                     <h2 class="text-[#0d131b] text-base font-bold leading-tight">Journal</h2>
@@ -81,7 +81,7 @@
                 </div>
               </div>
             </div>
-            <div class="grid grid-cols-[repeat(auto-fit,minmax(158px,1fr))] gap-3 p-4">
+            <div class="grid grid-cols-1 sm:grid-cols-3 gap-3 p-4">
               <div class="flex flex-col gap-3">
                 <div
                   class="w-full bg-center bg-no-repeat aspect-video bg-cover rounded-xl"
