edited html and added stylecss

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HAAL - Mental Health App</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;700&display=swap" rel="stylesheet">
     <style>
         .header-image {
             background-image: url('https://cdn.usegalileo.ai/sdxl10/e846b766-26fd-4626-85e2-b2ddb31ad6a2.png');
@@ -46,7 +48,7 @@
         <div class="header-image rounded mx-auto d-block mb-4"></div>
         <h1>HAAL is the premier mental health app for Gen Z</h1>
         <p>Featuring daily mood check-ins, a journal, and a community of peers</p>
-        <a href="#" class="btn btn-primary">Download on the App Store</a>
+        <a href="https://apps.apple.com/th/app/haal/id6477761521" class="btn btn-primary">Download on the App Store</a>
     </div>
 
     <div class="features text-center mb-5">
@@ -82,7 +84,7 @@
 
     <div class="text-center mb-5">
         <h2>Awards</h2>
-        <p><a href="#">Congressional App Challenge Winner</a></p>
+        <p><a href="https://www.congressionalappchallenge.us/23-il14/">Congressional App Challenge Winner</a></p>
     </div>
 </div>
 
