--- a/old_index.html
+++ b/old_index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <header>
             <h1>HAAL</h1>
+            <h1>HAAL</h1>
         </header>
         <main>
             <section class="hero">
