--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HAAL - Mental Health App</title>
+    <title>HAAL</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;700&display=swap" rel="stylesheet">
@@ -50,7 +50,7 @@
     <div class="text-center mb-5">
         <div class="header-image rounded mx-auto d-block mb-4"></div>
         <h1>HAAL is the premier mental health app for Gen Z</h1>
-        <p>Featuring daily mood check-ins, a journal, and a community of peers</p>
+        <p>Featuring daily mood check-ins, a journal, and resources for you</p>
         <a href="https://apps.apple.com/th/app/haal/id6477761521" class="btn btn-primary">Download on the App Store</a>
     </div>
 
