--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <div class="container mt-5">
     <div class="text-center mb-5">
         <div class="header-image rounded mx-auto d-block mb-4"></div>
-        <h1>HAAL is the premier mental health app for Gen Z</h1>
+        <h1>Manage and work through your anxiety with HAAL</h1>
         <p>Featuring daily mood check-ins, a journal, and resources for you</p>
         <a href="https://apps.apple.com/th/app/haal/id6477761521" class="btn btn-primary">Download on the App Store</a>
     </div>
