Deploy HAAL - Healthy AI Mental Health Assistant

--- a/index.html
+++ b/index.html
@@ -1,109 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HAAL</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Epilogue:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-    
-    @import url('https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&display=swap');
-
-        .header-image {
-            background-image: url('https://cdn.usegalileo.ai/sdxl10/e846b766-26fd-4626-85e2-b2ddb31ad6a2.png');
-            background-size: cover;
-            background-position: center;
-            height: 300px;
-        }
-        .features img {
-            width: 100%;
-            height: auto;
-        }
-
-        footer {
-            text-align: center;
-            padding: 30px;
-            background-color: #f8f9fa;
-            margin-top: -10px;
-        }
-        .footer-content {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        .footer-content p, .footer-content a {
-            margin: 0 10px;
-        }
-        .linkedin-icon {
-            width: 24px;
-            height: 24px;
-        }
-
-
+  <head>
+    <meta charset="utf-8" />
+    <meta httpEquiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <title>HAALfinal</title>
+    <!-- The `react-native-web` recommended style reset: https://necolas.github.io/react-native-web/docs/setup/#root-element -->
+    <style id="expo-reset">
+      /* These styles make the body full-height */
+      html,
+      body {
+        height: 100%;
+      }
+      /* These styles disable body scrolling if you are using <ScrollView> */
+      body {
+        overflow: hidden;
+      }
+      /* These styles make the root element full-height */
+      #root {
+        display: flex;
+        height: 100%;
+        flex: 1;
+      }
     </style>
-</head>
-<body>
+  <link rel="icon" href="/favicon.ico" /></head>
 
-<div class="container mt-5">
-    <div class="text-center mb-5">
-        <div class="header-image rounded mx-auto d-block mb-4"></div>
-        <h1>Manage and work through your anxiety with HAAL</h1>
-        <p>Featuring daily mood check-ins, a journal, and resources for you</p>
-        <a href="https://apps.apple.com/th/app/haal/id6477761521" class="btn btn-primary">Download on the App Store</a>
-    </div>
-
-    <div class="features text-center mb-5">
-        <h2>Features</h2>
-        <p>HAAL is a mental health app that helps you take care of yourself. It's designed to be easy to use and to help you feel good every day.</p>
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Journal</h5>
-                        <p class="card-text">Write down your thoughts and feelings</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Mood tracker</h5>
-                        <p class="card-text">Track your mood every day to see patterns</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Resources</h5>
-                        <p class="card-text">Access a variety of mental health tools and information</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <div class="text-center mb-5">
-        <h2>Awards</h2>
-        <p><a href="https://www.congressionalappchallenge.us/23-il14/">Congressional App Challenge Winner</a></p>
-    </div>
-</div>
-
-<footer>
-    <div class="footer-content">
-        <p>© Maya Sharma 2025 | <a href="mailto:maayusharma@gmail.com">maayusharma@gmail.com</a></p>
-        <a href="https://www.linkedin.com/in/mayasharma27/">
-            <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" class="linkedin-icon">
-        </a>
-    </div>
-</footer>
-
-
-
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <body>
+    <!-- Use static rendering with Expo Router to support running without JavaScript. -->
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
+    <!-- The root element for your Expo app. -->
+    <div id="root"></div>
+  <script src="/_expo/static/js/web/index-5dc813ec068b3640c36ba0ef7823ece6.js" defer></script>
 </body>
 </html>
