Deploy HAAL - Healthy AI Mental Health Assistant

--- a/index.html
+++ b/index.html
@@ -35,3 +35,4 @@
   <script src="/_expo/static/js/web/index-5dc813ec068b3640c36ba0ef7823ece6.js" defer></script>
 </body>
 </html>
+<!-- HAAL Mental Health App deployed -->
